# SushiStack

./: .gitignore  .sushistack  README.md  install.ps1  install.sh
cli/: config.toml  install.py  pyproject.toml
cli/manifests/: base.deps.toml
cli/sushistack/: __init__.py  __main__.py  cli.py  config.py  console.py
cli/sushistack/services/: __init__.py  cli_install.py  customize.py  discovery.py  modules.py  setup.py
cli/sushistack/setup/: __init__.py  dependency_source.py  package_managers.py  pipeline.py  probe.py  steps.py  toolchains.py
