[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sushistack-cli"
version = "1.0.0"
description = "SushiStack CLI — shared dependency provisioning and module manager for the stack"
authors = [{ name = "Mustafa Garip", email = "mustafagarip@sushisystems.io" }]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
]

# sushicli (shared CLI presentation layer, see D:/Projects/sushicli) is
# intentionally NOT listed above: it isn't published to any index, so a bare
# "sushicli>=0.1.0" dependency can't be resolved by pip/pipx from a clean
# environment. `pip install -e cli` expects it already installed once in the
# same environment (`pip install -e ../sushicli`); `python cli/install.py`
# (pipx, isolated venv) injects it automatically from the sibling checkout.

[project.scripts]
ss = "sushistack.cli:app"
sushistack = "sushistack.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["sushistack*"]

# The dependency fragments under cli/manifests/ are read from the cloned
# workspace at run time (ss resolves the workspace root via the .sushistack
# marker), so they are not shipped inside the wheel.

[tool.setuptools.package-data]
sushistack = ["py.typed"]
